2008-01-08  Gil Forcada  <gforcada@svn.gnome.org>

	* templates/person-base.tmpl:
	Make sure the nobody icon is shown when webroot is set to different than /

2008-01-08  Gil Forcada  <gforcada@svn.gnome.org>

	* releases.xml.in:
	* gnome-modules.xml.in:
	Branched gconf for gnome-2-20
	Removed gpdf and giftoxic since they are now in svn-archive.gnome.org

2008-01-08  Gil Forcada  <gforcada@svn.gnome.org>

	* releases.xml.in:
	Set the correct branch for gucharmap in GNOME 2.18

2008-01-08  Gil Forcada  <gforcada@svn.gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	Added a new branch of gucharmap

2008-01-08  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: 
	* releases.xml.in: gvfs module added.
	* people.xml.in:
	* translation-teams.xml.in: Pashto coordination changed.

2008-01-04  Johannes Schmid <jhs@gnome.org>

	* translation-teams.xml.in:
 	* people.xml.in:
	
	Changed [af] translation coordinator

2007-12-30  Johannes Schmid <jhs@gnome.org>

	* translation-teams.xml.in:
	* people.xml.in:
	
	Changes usernames without svn accounts to have a x- prefix

2007-12-26  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Brasero stable branch is now brasero_0_7.

2007-12-26  Claude Paroz  <claude@2xlibre.net>

	* data.py: Added the possibility to request the original English xml
	file.
	* teams.py: bugzilla-component is now computed in __init__ from the
	original English file.
	Fixes #474014.

2007-12-22  Johannes Schmid <jhs@gnome.org>

	* releases.xml.in:
	Reverted changes of 2007-12-18

2007-12-22  Claude Paroz  <claude@2xlibre.net>

	* translation-teams.xml.in: Changed Pushto to Pashto by request of
	Zabeeh khan.
	http://mail.gnome.org/archives/gnome-i18n/2007-December/msg00094.html

2007-12-18  Johannes Schmid <jhs@gnome.org>

	* people.xml.in:
	* translation-teams.xml.in:

	Added ht translation team

2007-12-18  Johannes Schmid <jhs@gnome.org>

	* gnome-modules.xml.in: gnome-2-20 branch for ghex