@@ -317,9 +317,6 @@
     <branch id="gnome-2-18" stringfrozen="true"/>
     <branch id="gnome-2-20" stringfrozen="true"/>
   </module>
-  <module id="evolution-gconf-ldap-backend">
-    <branch id="HEAD"/>
-  </module>
   <module id="evolution-jescs">
     <branch id="HEAD"/>
     <branch id="gnome-2-20"/>
@@ -622,9 +619,6 @@
     <branch id="HEAD"/>
   </module>
   <module id="gnome-build">
-    <branch id="HEAD"/>
-  </module>
-  <module id="gnomechat">
     <branch id="HEAD"/>
   </module>
   <module id="gnome-commander">
@@ -1564,9 +1558,6 @@
     <branch id="vte-0-12"/>
     <branch id="HEAD" stringfrozen="true"/>
     <branch id="gnome-2-16" stringfrozen="true"/>
-  </module>
-  <module id="webeyes">
-    <branch id="HEAD"/>
   </module>
   <module id="xchat-gnome">
     <branch id="HEAD"/>
