@@ -139,7 +139,6 @@
     <module id="epiphany-mono"/>
     <module id="evolution-brainread"/>
     <module id="evolution-caldav"/>
-    <module id="evolution-gconf-ldap-backend"/>
     <module id="evolution-jescs"/>
     <module id="evolution-scalix"/>
     <module id="evolution-xmltv"/>
@@ -187,7 +186,6 @@
     <module id="gnome-themes-extras"/>
     <module id="gnome-torrent"/>
     <module id="gnome-user-share"/>
-    <module id="gnomechat"/>
     <module id="gnomeradio"/>
     <module id="goobox"/>
     <module id="gossip"/>
@@ -245,7 +243,6 @@
     <module id="straw"/>
     <module id="tracker"/>
     <module id="vinagre"/>
-    <module id="webeyes"/>
     <module id="xchat-gnome"/>
     <module id="xdg-user-dirs-gtk"/>
   </release>
