@@ -1,5 +1,12 @@
 2008-01-08  Gil Forcada  <gforcada@svn.gnome.org>
 
+	* releases.xml.in:
+	* gnome-modules.xml.in:
+	Removed gnomechat, webeyes and evolution-gconf-ldap-backend since they are
+	now in svn-archive.gnome.org
+
+2008-01-08  Gil Forcada  <gforcada@svn.gnome.org>
+
 	* templates/person-base.tmpl:
 	Make sure the nobody icon is shown when webroot is set to different than /
 
